# lenet5-cky

./: CMakeLists.txt  README.md  demo.cc
src/: CMakeLists.txt
